# pro1-projekt

./: data_analysis.ipynb  data_processing_utils.py  model_testing.py  pyproject.toml  test.ipynb  test.py  test_result_viewing.ipynb  utils.py
