[tool.poetry]
name = "pro1"
version = "0.1.0"
description = ""
authors = ["kw-00 <christopher.p.wojcik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
numpy = "^2.2.0"
matplotlib = "^3.10.0"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
